Cleanup AbstractClient and AbstractResource for ruse

--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -47,7 +47,7 @@ import static com.okta.sdk.lang.Assert.hasText;
     @javax.annotation.Generated(
             value = "{{generatorClass}}",
             date  = "{{generatedDate}}")
-    public class {{classname}} extends AbstractClient {
+    public class {{classname}} extends AbstractClient implements Client {
 
     /**
     * Instantiates a new Client instance that will communicate with the Okta REST API.  See the class-level
