Deprecated com.okta.sdk.lang in favor of com.okta.commons.lang

--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -40,8 +40,8 @@ import java.util.List;
 import java.util.Map;
 {{/fullJavaUtil}}
 
-import static com.okta.sdk.lang.Assert.notNull;
-import static com.okta.sdk.lang.Assert.hasText;
+import static com.okta.commons.lang.Assert.notNull;
+import static com.okta.commons.lang.Assert.hasText;
 
 {{#operations}}
 @javax.annotation.Generated(
