--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -39,8 +39,8 @@ import com.okta.sdk.resource.Resource;
 {{/vendorExtensions.top-level}}
 import java.util.Map;
 
-import static com.okta.sdk.lang.Assert.notNull;
-import static com.okta.sdk.lang.Assert.hasText;
+import static com.okta.commons.lang.Assert.notNull;
+import static com.okta.commons.lang.Assert.hasText;
 
 {{#models}}{{#model}}
 /**
