Add interface ExtensibleResource to all Okta Resources
This allows easier access to arbitrary properties
Tests needed to be updated as groovy handles accessing maps differently then regular bean objects (this wouldn't be an issue for Java usage though)

--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodDelete.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodDelete.mustache
@@ -13,4 +13,4 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-        getDataStore().delete({{#vendorExtensions.selfDelete}}href, this{{/vendorExtensions.selfDelete}}{{^vendorExtensions.selfDelete}}href{{/vendorExtensions.selfDelete}});
+        getDataStore().delete({{#vendorExtensions.selfDelete}}href, (Resource) this{{/vendorExtensions.selfDelete}}{{^vendorExtensions.selfDelete}}href{{/vendorExtensions.selfDelete}});
