Fix ordering of generated methods body before query
The Client classes methods are already ordered this way, it was just the User and Factor methods that were _wrong_

This change adds the ability to specific a `<Classname>.mustache` file and have it's contents be appended when using the tag: {{#vendorExtensions.optionalClassnamePartial}}
The new User.mustache and Factor.mustache templates include the old (compatible but deprecated) methods which just call the new method

--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -220,7 +220,7 @@ public class Default{{classname}} extends {{#parent}}{{.}}{{/parent}}{{^parent}}
 
 {{/.}}
 {{/vendorExtensions.operations}}
-
+{{#vendorExtensions.optionalClassnamePartial}}// optional class specific partial{{/vendorExtensions.optionalClassnamePartial}}
 {{/model}}
 {{/models}}
 }
