Add methods to client to make search/filter/query users easier to understand

--- a/swagger-templates/src/main/resources/OktaJava/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/api.mustache
@@ -110,5 +110,6 @@ public interface {{classname}} extends DataStore {
 
 {{/vendorExtensions.moved}}
 {{/operation}}
-}
 {{/operations}}
+{{#vendorExtensions.optionalClassnamePartial}}// optional class specific partial{{/vendorExtensions.optionalClassnamePartial}}
+}
