Pulled HTTP Request execution out of the SDK project and into okta-commons-java
NOTE: CI will fail until the above project is merged

--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -18,8 +18,8 @@ import com.okta.sdk.impl.resource.AbstractResource;
 import com.okta.sdk.impl.resource.Property;
 import com.okta.sdk.impl.resource.ResourceReference;
 import com.okta.sdk.impl.ds.InternalDataStore;
-import com.okta.sdk.impl.http.QueryString;
-import com.okta.sdk.impl.http.HttpHeaders;
+import com.okta.commons.http.QueryString;
+import com.okta.commons.http.HttpHeaders;
 
 {{! TODO: add these programatically when needed }}
 import com.okta.sdk.impl.resource.BooleanProperty;
