--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -19,11 +19,8 @@ package {{package}};
 import com.okta.sdk.cache.CacheManager;
 import com.okta.sdk.client.AuthenticationScheme;
 import com.okta.sdk.client.Proxy;
-import com.okta.sdk.impl.api.ClientCredentialsResolver;
-import com.okta.sdk.impl.http.authc.RequestAuthenticatorFactory;
-import com.okta.sdk.impl.util.BaseUrlResolver;
-import com.okta.sdk.impl.http.QueryString;
-import com.okta.sdk.impl.http.HttpHeaders;
+import com.okta.commons.http.QueryString;
+import com.okta.commons.http.HttpHeaders;
 import com.okta.sdk.impl.config.ClientConfiguration;
 
 import {{vendorExtensions.overrideApiPackage}}.*;
@@ -50,31 +47,6 @@ import static com.okta.commons.lang.Assert.hasText;
         date  = "{{generatedDate}}")
 @SuppressWarnings("deprecation")
 public class {{classname}} extends com.okta.sdk.impl.client.AbstractClient {
-
-    /**
-    * Instantiates a new Client instance that will communicate with the Okta REST API.  See the class-level
-    * JavaDoc for a usage example.
-    *
-    * @param clientCredentialsResolver   Okta API Key resolver
-    * @param baseUrlResolver             Okta base URL resolver
-    * @param proxy                       the HTTP proxy to be used when communicating with the Okta API server (can be
-    *                                    null)
-    * @param cacheManager                the {@link CacheManager} that should be used to cache
-    *                                    Okta REST resources (can be null)
-    * @param authenticationScheme        the HTTP authentication scheme to be used when communicating with the Okta API
-    * @param requestAuthenticatorFactory
-    * @param connectionTimeout
-    */
-    @Deprecated
-    public {{classname}}(ClientCredentialsResolver clientCredentialsResolver,
-                         BaseUrlResolver baseUrlResolver,
-                         Proxy proxy,
-                         CacheManager cacheManager,
-                         AuthenticationScheme authenticationScheme,
-                         RequestAuthenticatorFactory requestAuthenticatorFactory,
-                         int connectionTimeout) {
-        super(clientCredentialsResolver, baseUrlResolver, proxy, cacheManager, authenticationScheme, requestAuthenticatorFactory, connectionTimeout);
-    }
 
     /**
     * Instantiates a new Client instance that will communicate with the Okta REST API.  See the class-level
