OKTA-292884: fix broken documentation link
See https://oktainc.atlassian.net/browse/OKTA-292884

--- a/swagger-templates/src/main/resources/OktaJava/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/api.mustache
@@ -35,7 +35,7 @@ import com.okta.sdk.ds.DataStore;
 *
 * client.getUser(userId)
 * </pre>
-* @see <a href="http://www.okta.com/docs/quickstart/connect">Communicating with Okta: Get your API Key</a>
+* @see <a href="https://developer.okta.com/docs/guides/create-an-api-token/overview">Communicating with Okta: Get your API Token</a>
 * @see DataStore
 * @since 0.5.0
 */
